@@ -1,11 +1,38 @@
+# is this config file disabled
+# false for enabled
+# true for disabled
 disabled=false
+
+# the name of the group this storage server belongs to
 group_name=group1
+
+# bind an address of this host
+# empty for bind all addresses of this host
 bind_addr=
+
+# if bind an address of this host when connect to other servers 
+# (this storage server as a client)
+# true for binding the address configed by above parameter: "bind_addr"
+# false for binding any address of this host
+client_bind=true
+
+# the storage server port
 port=23000
+
+# network timeout in seconds
 network_timeout=60
+
+# heart beat interval in seconds
 heart_beat_interval=30
+
+# disk usage report interval in seconds
 stat_report_interval=60
+
+# the base path to store data and log files
 base_path=/home/yuqing/fastdfs
+
+# max concurrent connections server supported
+# max_connections worker threads start when this service startup
 max_connections=256
 
 # when no entry to sync, try read binlog again after X milliseconds
