@@ -1,8 +1,23 @@
+# is this config file disabled
+# false for enabled
+# true for disabled
 disabled=false
+
+# bind an address of this host
+# empty for bind all addresses of this host
 bind_addr=
+
+# the tracker server port
 port=22122
+
+# network timeout in seconds
 network_timeout=60
+
+# the base path to store data and log files
 base_path=/home/yuqing/fastdfs
+
+# max concurrent connections this server supported
+# max_connections worker threads start when this service startup
 max_connections=256
 
 # the method of selecting group to upload files
